--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -4838,25 +4838,6 @@ references:
   isSpec: "True"
   fullName: TestInventory.RemoveItem_OnQuantityBelowZero_ItemRemoved
   nameWithType: TestInventory.RemoveItem_OnQuantityBelowZero_ItemRemoved
-- uid: Global.TestPowerupDrop
-  name: TestPowerupDrop
-  href: api/Global.TestPowerupDrop.html
-  commentId: T:Global.TestPowerupDrop
-  fullName: TestPowerupDrop
-  nameWithType: TestPowerupDrop
-- uid: Global.TestPowerupDrop.DropItem
-  name: DropItem()
-  href: api/Global.TestPowerupDrop.html#Global_TestPowerupDrop_DropItem
-  commentId: M:Global.TestPowerupDrop.DropItem
-  fullName: TestPowerupDrop.DropItem()
-  nameWithType: TestPowerupDrop.DropItem()
-- uid: Global.TestPowerupDrop.DropItem*
-  name: DropItem
-  href: api/Global.TestPowerupDrop.html#Global_TestPowerupDrop_DropItem_
-  commentId: Overload:Global.TestPowerupDrop.DropItem
-  isSpec: "True"
-  fullName: TestPowerupDrop.DropItem
-  nameWithType: TestPowerupDrop.DropItem
 - uid: Global.TimerController
   name: TimerController
   href: api/Global.TimerController.html
@@ -5655,6 +5636,281 @@ references:
   isSpec: "True"
   fullName: Interactable.DoorController.OpenDoor
   nameWithType: DoorController.OpenDoor
+- uid: PowerUps
+  name: PowerUps
+  href: api/PowerUps.html
+  commentId: N:PowerUps
+  fullName: PowerUps
+  nameWithType: PowerUps
+- uid: PowerUps.DoctorMonsterPowerUp
+  name: DoctorMonsterPowerUp
+  href: api/PowerUps.DoctorMonsterPowerUp.html
+  commentId: T:PowerUps.DoctorMonsterPowerUp
+  fullName: PowerUps.DoctorMonsterPowerUp
+  nameWithType: DoctorMonsterPowerUp
+- uid: PowerUps.DoctorMonsterPowerUp.ApplyPowerUp(PlayerController)
+  name: ApplyPowerUp(PlayerController)
+  href: api/PowerUps.DoctorMonsterPowerUp.html#PowerUps_DoctorMonsterPowerUp_ApplyPowerUp_PlayerController_
+  commentId: M:PowerUps.DoctorMonsterPowerUp.ApplyPowerUp(PlayerController)
+  fullName: PowerUps.DoctorMonsterPowerUp.ApplyPowerUp(PlayerController)
+  nameWithType: DoctorMonsterPowerUp.ApplyPowerUp(PlayerController)
+- uid: PowerUps.DoctorMonsterPowerUp.ApplyPowerUp*
+  name: ApplyPowerUp
+  href: api/PowerUps.DoctorMonsterPowerUp.html#PowerUps_DoctorMonsterPowerUp_ApplyPowerUp_
+  commentId: Overload:PowerUps.DoctorMonsterPowerUp.ApplyPowerUp
+  isSpec: "True"
+  fullName: PowerUps.DoctorMonsterPowerUp.ApplyPowerUp
+  nameWithType: DoctorMonsterPowerUp.ApplyPowerUp
+- uid: PowerUps.GreenMonsterPowerUp
+  name: GreenMonsterPowerUp
+  href: api/PowerUps.GreenMonsterPowerUp.html
+  commentId: T:PowerUps.GreenMonsterPowerUp
+  fullName: PowerUps.GreenMonsterPowerUp
+  nameWithType: GreenMonsterPowerUp
+- uid: PowerUps.GreenMonsterPowerUp.ApplyPowerUp(PlayerController)
+  name: ApplyPowerUp(PlayerController)
+  href: api/PowerUps.GreenMonsterPowerUp.html#PowerUps_GreenMonsterPowerUp_ApplyPowerUp_PlayerController_
+  commentId: M:PowerUps.GreenMonsterPowerUp.ApplyPowerUp(PlayerController)
+  fullName: PowerUps.GreenMonsterPowerUp.ApplyPowerUp(PlayerController)
+  nameWithType: GreenMonsterPowerUp.ApplyPowerUp(PlayerController)
+- uid: PowerUps.GreenMonsterPowerUp.ApplyPowerUp*
+  name: ApplyPowerUp
+  href: api/PowerUps.GreenMonsterPowerUp.html#PowerUps_GreenMonsterPowerUp_ApplyPowerUp_
+  commentId: Overload:PowerUps.GreenMonsterPowerUp.ApplyPowerUp
+  isSpec: "True"
+  fullName: PowerUps.GreenMonsterPowerUp.ApplyPowerUp
+  nameWithType: GreenMonsterPowerUp.ApplyPowerUp
+- uid: PowerUps.GreenMonsterPowerUp.PowerUpDuration
+  name: PowerUpDuration
+  href: api/PowerUps.GreenMonsterPowerUp.html#PowerUps_GreenMonsterPowerUp_PowerUpDuration
+  commentId: P:PowerUps.GreenMonsterPowerUp.PowerUpDuration
+  fullName: PowerUps.GreenMonsterPowerUp.PowerUpDuration
+  nameWithType: GreenMonsterPowerUp.PowerUpDuration
+- uid: PowerUps.GreenMonsterPowerUp.PowerUpDuration*
+  name: PowerUpDuration
+  href: api/PowerUps.GreenMonsterPowerUp.html#PowerUps_GreenMonsterPowerUp_PowerUpDuration_
+  commentId: Overload:PowerUps.GreenMonsterPowerUp.PowerUpDuration
+  isSpec: "True"
+  fullName: PowerUps.GreenMonsterPowerUp.PowerUpDuration
+  nameWithType: GreenMonsterPowerUp.PowerUpDuration
+- uid: PowerUps.GreenMonsterPowerUp.PowerUpTimer
+  name: PowerUpTimer
+  href: api/PowerUps.GreenMonsterPowerUp.html#PowerUps_GreenMonsterPowerUp_PowerUpTimer
+  commentId: P:PowerUps.GreenMonsterPowerUp.PowerUpTimer
+  fullName: PowerUps.GreenMonsterPowerUp.PowerUpTimer
+  nameWithType: GreenMonsterPowerUp.PowerUpTimer
+- uid: PowerUps.GreenMonsterPowerUp.PowerUpTimer*
+  name: PowerUpTimer
+  href: api/PowerUps.GreenMonsterPowerUp.html#PowerUps_GreenMonsterPowerUp_PowerUpTimer_
+  commentId: Overload:PowerUps.GreenMonsterPowerUp.PowerUpTimer
+  isSpec: "True"
+  fullName: PowerUps.GreenMonsterPowerUp.PowerUpTimer
+  nameWithType: GreenMonsterPowerUp.PowerUpTimer
+- uid: PowerUps.GreenMonsterPowerUp.UpdateTimer
+  name: UpdateTimer()
+  href: api/PowerUps.GreenMonsterPowerUp.html#PowerUps_GreenMonsterPowerUp_UpdateTimer
+  commentId: M:PowerUps.GreenMonsterPowerUp.UpdateTimer
+  fullName: PowerUps.GreenMonsterPowerUp.UpdateTimer()
+  nameWithType: GreenMonsterPowerUp.UpdateTimer()
+- uid: PowerUps.GreenMonsterPowerUp.UpdateTimer*
+  name: UpdateTimer
+  href: api/PowerUps.GreenMonsterPowerUp.html#PowerUps_GreenMonsterPowerUp_UpdateTimer_
+  commentId: Overload:PowerUps.GreenMonsterPowerUp.UpdateTimer
+  isSpec: "True"
+  fullName: PowerUps.GreenMonsterPowerUp.UpdateTimer
+  nameWithType: GreenMonsterPowerUp.UpdateTimer
+- uid: PowerUps.HamiltonMonsterPowerUp
+  name: HamiltonMonsterPowerUp
+  href: api/PowerUps.HamiltonMonsterPowerUp.html
+  commentId: T:PowerUps.HamiltonMonsterPowerUp
+  fullName: PowerUps.HamiltonMonsterPowerUp
+  nameWithType: HamiltonMonsterPowerUp
+- uid: PowerUps.HamiltonMonsterPowerUp.ApplyPowerUp(PlayerController)
+  name: ApplyPowerUp(PlayerController)
+  href: api/PowerUps.HamiltonMonsterPowerUp.html#PowerUps_HamiltonMonsterPowerUp_ApplyPowerUp_PlayerController_
+  commentId: M:PowerUps.HamiltonMonsterPowerUp.ApplyPowerUp(PlayerController)
+  fullName: PowerUps.HamiltonMonsterPowerUp.ApplyPowerUp(PlayerController)
+  nameWithType: HamiltonMonsterPowerUp.ApplyPowerUp(PlayerController)
+- uid: PowerUps.HamiltonMonsterPowerUp.ApplyPowerUp*
+  name: ApplyPowerUp
+  href: api/PowerUps.HamiltonMonsterPowerUp.html#PowerUps_HamiltonMonsterPowerUp_ApplyPowerUp_
+  commentId: Overload:PowerUps.HamiltonMonsterPowerUp.ApplyPowerUp
+  isSpec: "True"
+  fullName: PowerUps.HamiltonMonsterPowerUp.ApplyPowerUp
+  nameWithType: HamiltonMonsterPowerUp.ApplyPowerUp
+- uid: PowerUps.IPowerUp
+  name: IPowerUp
+  href: api/PowerUps.IPowerUp.html
+  commentId: T:PowerUps.IPowerUp
+  fullName: PowerUps.IPowerUp
+  nameWithType: IPowerUp
+- uid: PowerUps.IPowerUp.ApplyPowerUp(PlayerController)
+  name: ApplyPowerUp(PlayerController)
+  href: api/PowerUps.IPowerUp.html#PowerUps_IPowerUp_ApplyPowerUp_PlayerController_
+  commentId: M:PowerUps.IPowerUp.ApplyPowerUp(PlayerController)
+  fullName: PowerUps.IPowerUp.ApplyPowerUp(PlayerController)
+  nameWithType: IPowerUp.ApplyPowerUp(PlayerController)
+- uid: PowerUps.IPowerUp.ApplyPowerUp*
+  name: ApplyPowerUp
+  href: api/PowerUps.IPowerUp.html#PowerUps_IPowerUp_ApplyPowerUp_
+  commentId: Overload:PowerUps.IPowerUp.ApplyPowerUp
+  isSpec: "True"
+  fullName: PowerUps.IPowerUp.ApplyPowerUp
+  nameWithType: IPowerUp.ApplyPowerUp
+- uid: PowerUps.ITimedPowerUp
+  name: ITimedPowerUp
+  href: api/PowerUps.ITimedPowerUp.html
+  commentId: T:PowerUps.ITimedPowerUp
+  fullName: PowerUps.ITimedPowerUp
+  nameWithType: ITimedPowerUp
+- uid: PowerUps.ITimedPowerUp.PowerUpDuration
+  name: PowerUpDuration
+  href: api/PowerUps.ITimedPowerUp.html#PowerUps_ITimedPowerUp_PowerUpDuration
+  commentId: P:PowerUps.ITimedPowerUp.PowerUpDuration
+  fullName: PowerUps.ITimedPowerUp.PowerUpDuration
+  nameWithType: ITimedPowerUp.PowerUpDuration
+- uid: PowerUps.ITimedPowerUp.PowerUpDuration*
+  name: PowerUpDuration
+  href: api/PowerUps.ITimedPowerUp.html#PowerUps_ITimedPowerUp_PowerUpDuration_
+  commentId: Overload:PowerUps.ITimedPowerUp.PowerUpDuration
+  isSpec: "True"
+  fullName: PowerUps.ITimedPowerUp.PowerUpDuration
+  nameWithType: ITimedPowerUp.PowerUpDuration
+- uid: PowerUps.ITimedPowerUp.PowerUpTimer
+  name: PowerUpTimer
+  href: api/PowerUps.ITimedPowerUp.html#PowerUps_ITimedPowerUp_PowerUpTimer
+  commentId: P:PowerUps.ITimedPowerUp.PowerUpTimer
+  fullName: PowerUps.ITimedPowerUp.PowerUpTimer
+  nameWithType: ITimedPowerUp.PowerUpTimer
+- uid: PowerUps.ITimedPowerUp.PowerUpTimer*
+  name: PowerUpTimer
+  href: api/PowerUps.ITimedPowerUp.html#PowerUps_ITimedPowerUp_PowerUpTimer_
+  commentId: Overload:PowerUps.ITimedPowerUp.PowerUpTimer
+  isSpec: "True"
+  fullName: PowerUps.ITimedPowerUp.PowerUpTimer
+  nameWithType: ITimedPowerUp.PowerUpTimer
+- uid: PowerUps.ITimedPowerUp.UpdateTimer
+  name: UpdateTimer()
+  href: api/PowerUps.ITimedPowerUp.html#PowerUps_ITimedPowerUp_UpdateTimer
+  commentId: M:PowerUps.ITimedPowerUp.UpdateTimer
+  fullName: PowerUps.ITimedPowerUp.UpdateTimer()
+  nameWithType: ITimedPowerUp.UpdateTimer()
+- uid: PowerUps.ITimedPowerUp.UpdateTimer*
+  name: UpdateTimer
+  href: api/PowerUps.ITimedPowerUp.html#PowerUps_ITimedPowerUp_UpdateTimer_
+  commentId: Overload:PowerUps.ITimedPowerUp.UpdateTimer
+  isSpec: "True"
+  fullName: PowerUps.ITimedPowerUp.UpdateTimer
+  nameWithType: ITimedPowerUp.UpdateTimer
+- uid: PowerUps.PowerUpController
+  name: PowerUpController
+  href: api/PowerUps.PowerUpController.html
+  commentId: T:PowerUps.PowerUpController
+  fullName: PowerUps.PowerUpController
+  nameWithType: PowerUpController
+- uid: PowerUps.PowerUpController.#ctor(PlayerController,InventoryController)
+  name: PowerUpController(PlayerController, InventoryController)
+  href: api/PowerUps.PowerUpController.html#PowerUps_PowerUpController__ctor_PlayerController_InventoryController_
+  commentId: M:PowerUps.PowerUpController.#ctor(PlayerController,InventoryController)
+  fullName: PowerUps.PowerUpController.PowerUpController(PlayerController, InventoryController)
+  nameWithType: PowerUpController.PowerUpController(PlayerController, InventoryController)
+- uid: PowerUps.PowerUpController.#ctor*
+  name: PowerUpController
+  href: api/PowerUps.PowerUpController.html#PowerUps_PowerUpController__ctor_
+  commentId: Overload:PowerUps.PowerUpController.#ctor
+  isSpec: "True"
+  fullName: PowerUps.PowerUpController.PowerUpController
+  nameWithType: PowerUpController.PowerUpController
+- uid: PowerUps.PowerUpController.UpdatePowerUpTimers
+  name: UpdatePowerUpTimers()
+  href: api/PowerUps.PowerUpController.html#PowerUps_PowerUpController_UpdatePowerUpTimers
+  commentId: M:PowerUps.PowerUpController.UpdatePowerUpTimers
+  fullName: PowerUps.PowerUpController.UpdatePowerUpTimers()
+  nameWithType: PowerUpController.UpdatePowerUpTimers()
+- uid: PowerUps.PowerUpController.UpdatePowerUpTimers*
+  name: UpdatePowerUpTimers
+  href: api/PowerUps.PowerUpController.html#PowerUps_PowerUpController_UpdatePowerUpTimers_
+  commentId: Overload:PowerUps.PowerUpController.UpdatePowerUpTimers
+  isSpec: "True"
+  fullName: PowerUps.PowerUpController.UpdatePowerUpTimers
+  nameWithType: PowerUpController.UpdatePowerUpTimers
+- uid: PowerUps.PowerUpDrop
+  name: PowerUpDrop
+  href: api/PowerUps.PowerUpDrop.html
+  commentId: T:PowerUps.PowerUpDrop
+  fullName: PowerUps.PowerUpDrop
+  nameWithType: PowerUpDrop
+- uid: PowerUps.PowerUpDrop.DropItem
+  name: DropItem()
+  href: api/PowerUps.PowerUpDrop.html#PowerUps_PowerUpDrop_DropItem
+  commentId: M:PowerUps.PowerUpDrop.DropItem
+  fullName: PowerUps.PowerUpDrop.DropItem()
+  nameWithType: PowerUpDrop.DropItem()
+- uid: PowerUps.PowerUpDrop.DropItem*
+  name: DropItem
+  href: api/PowerUps.PowerUpDrop.html#PowerUps_PowerUpDrop_DropItem_
+  commentId: Overload:PowerUps.PowerUpDrop.DropItem
+  isSpec: "True"
+  fullName: PowerUps.PowerUpDrop.DropItem
+  nameWithType: PowerUpDrop.DropItem
+- uid: PowerUps.WhiteMonsterPowerUp
+  name: WhiteMonsterPowerUp
+  href: api/PowerUps.WhiteMonsterPowerUp.html
+  commentId: T:PowerUps.WhiteMonsterPowerUp
+  fullName: PowerUps.WhiteMonsterPowerUp
+  nameWithType: WhiteMonsterPowerUp
+- uid: PowerUps.WhiteMonsterPowerUp.ApplyPowerUp(PlayerController)
+  name: ApplyPowerUp(PlayerController)
+  href: api/PowerUps.WhiteMonsterPowerUp.html#PowerUps_WhiteMonsterPowerUp_ApplyPowerUp_PlayerController_
+  commentId: M:PowerUps.WhiteMonsterPowerUp.ApplyPowerUp(PlayerController)
+  fullName: PowerUps.WhiteMonsterPowerUp.ApplyPowerUp(PlayerController)
+  nameWithType: WhiteMonsterPowerUp.ApplyPowerUp(PlayerController)
+- uid: PowerUps.WhiteMonsterPowerUp.ApplyPowerUp*
+  name: ApplyPowerUp
+  href: api/PowerUps.WhiteMonsterPowerUp.html#PowerUps_WhiteMonsterPowerUp_ApplyPowerUp_
+  commentId: Overload:PowerUps.WhiteMonsterPowerUp.ApplyPowerUp
+  isSpec: "True"
+  fullName: PowerUps.WhiteMonsterPowerUp.ApplyPowerUp
+  nameWithType: WhiteMonsterPowerUp.ApplyPowerUp
+- uid: PowerUps.WhiteMonsterPowerUp.PowerUpDuration
+  name: PowerUpDuration
+  href: api/PowerUps.WhiteMonsterPowerUp.html#PowerUps_WhiteMonsterPowerUp_PowerUpDuration
+  commentId: P:PowerUps.WhiteMonsterPowerUp.PowerUpDuration
+  fullName: PowerUps.WhiteMonsterPowerUp.PowerUpDuration
+  nameWithType: WhiteMonsterPowerUp.PowerUpDuration
+- uid: PowerUps.WhiteMonsterPowerUp.PowerUpDuration*
+  name: PowerUpDuration
+  href: api/PowerUps.WhiteMonsterPowerUp.html#PowerUps_WhiteMonsterPowerUp_PowerUpDuration_
+  commentId: Overload:PowerUps.WhiteMonsterPowerUp.PowerUpDuration
+  isSpec: "True"
+  fullName: PowerUps.WhiteMonsterPowerUp.PowerUpDuration
+  nameWithType: WhiteMonsterPowerUp.PowerUpDuration
+- uid: PowerUps.WhiteMonsterPowerUp.PowerUpTimer
+  name: PowerUpTimer
+  href: api/PowerUps.WhiteMonsterPowerUp.html#PowerUps_WhiteMonsterPowerUp_PowerUpTimer
+  commentId: P:PowerUps.WhiteMonsterPowerUp.PowerUpTimer
+  fullName: PowerUps.WhiteMonsterPowerUp.PowerUpTimer
+  nameWithType: WhiteMonsterPowerUp.PowerUpTimer
+- uid: PowerUps.WhiteMonsterPowerUp.PowerUpTimer*
+  name: PowerUpTimer
+  href: api/PowerUps.WhiteMonsterPowerUp.html#PowerUps_WhiteMonsterPowerUp_PowerUpTimer_
+  commentId: Overload:PowerUps.WhiteMonsterPowerUp.PowerUpTimer
+  isSpec: "True"
+  fullName: PowerUps.WhiteMonsterPowerUp.PowerUpTimer
+  nameWithType: WhiteMonsterPowerUp.PowerUpTimer
+- uid: PowerUps.WhiteMonsterPowerUp.UpdateTimer
+  name: UpdateTimer()
+  href: api/PowerUps.WhiteMonsterPowerUp.html#PowerUps_WhiteMonsterPowerUp_UpdateTimer
+  commentId: M:PowerUps.WhiteMonsterPowerUp.UpdateTimer
+  fullName: PowerUps.WhiteMonsterPowerUp.UpdateTimer()
+  nameWithType: WhiteMonsterPowerUp.UpdateTimer()
+- uid: PowerUps.WhiteMonsterPowerUp.UpdateTimer*
+  name: UpdateTimer
+  href: api/PowerUps.WhiteMonsterPowerUp.html#PowerUps_WhiteMonsterPowerUp_UpdateTimer_
+  commentId: Overload:PowerUps.WhiteMonsterPowerUp.UpdateTimer
+  isSpec: "True"
+  fullName: PowerUps.WhiteMonsterPowerUp.UpdateTimer
+  nameWithType: WhiteMonsterPowerUp.UpdateTimer
 - uid: UI
   name: UI
   href: api/UI.html
